--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="tr">
 <head>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="yandex-verification" content="90b3ee4727af0024" />
+    <meta name="yandex-verification" content="90b3ee4727af0024"/>
 
     <meta name="keywords" content="aslancamikoyudernegi, Ordu, Fatsa, Anadolu, Yakası, Aslancami, Köyü, Derneği">
     <meta name="description" content="Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-  <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 
-  <link rel="shortcut icon" href="images/fav/fav.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/fav/fav.ico" type="image/x-icon">
 
     <link rel="apple-touch-icon" sizes="57x57" href="images/fav/57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/fav/114.png">
@@ -30,7 +30,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="images/fav/76.png">
     <link rel="apple-touch-icon" sizes="152x152" href="images/fav/152.png">
 
-  <title>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</title>
+    <title>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</title>
 
 </head>
 
@@ -38,203 +38,209 @@
 
 <!--Navbar-->
 <nav class="navbar">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">
-        <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
-      </a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hakkımızda <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Derneğimizin Tarihçesi</a></li>
-          <li><a href="#">Derneğimizin Tüzüğü</a></li>
-          <li><a href="#">Derneğimizin Etkinlikleri</a></li>
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">
+                <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
+            </a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hakkımızda <span
+                    class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Derneğimizin Tarihçesi</a></li>
+                    <li><a href="#">Derneğimizin Tüzüğü</a></li>
+                    <li><a href="#">Derneğimizin Etkinlikleri</a></li>
+                </ul>
+            </li>
+            <li><a href="yonetim.html">Yönetim ve Üyeler</a></li>
+            <li><a href="galery.html">Galeri</a></li>
+            <li><a href="iletisim.html">İletişim</a></li>
+            <li><a href="bmesaji.html">Başkanın mesajı</a></li>
+            <li><a href="duyurular.html">Duyurular</a></li>
         </ul>
-      </li>
-      <li><a href="yonetim.html">Yönetim ve Üyeler</a></li>
-      <li><a href="galery.html">Galeri</a></li>
-      <li><a href="iletisim.html">İletişim</a></li>
-      <li><a href="bmesaji.html">Başkanın mesajı</a></li>
-      <li><a href="duyurular.html">Duyurular</a></li>
-    </ul>
-  </div>
+    </div>
 </nav>
 
 
-
 <div class="container">
-  <div class="row">
-    <div class="col-sm-2">
-      <a href="index.html"><img src="images/logo150.png" class="img-responsive center-block" alt="Responsive image" id="logo"></a>
+    <div class="row">
+        <div class="col-sm-2">
+            <a href="index.html"><img src="images/logo150.png" class="img-responsive center-block"
+                                      alt="Responsive image" id="logo"></a>
+        </div>
+
+        <div class="col-sm-10">
+            <h1>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</h1>
+        </div>
     </div>
-
-    <div class="col-sm-10">
-      <h1>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</h1>
-  </div>
-  </div>
 </div>
-
 
 
 <!--Slider-->
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-  <!-- Wrapper for slides -->
-<div class="container-fluid">
-  <div class="row">
-    <div id="slider" class="col-sm-12">
-       <div class="carousel-inner">
+    <!-- Wrapper for slides -->
+    <div class="container-fluid">
+        <div class="row">
+            <div id="slider" class="col-sm-12">
+                <div class="carousel-inner">
 
-        <div class="item">
-           <img src="images/6666.jpg" alt="" style="width:60%">
+                    <div class="item">
+                        <img src="images/6666.jpg" alt="" style="width:60%">
+                    </div>
+
+                    <div class="item active">
+                        <img src="images/1111.jpg" alt="" style="width:100%">
+                    </div>
+
+                    <div class="item">
+                        <img src="images/2222.jpg" alt="" style="width:100%">
+                    </div>
+
+                    <div class="item">
+                        <img src="images/3333.jpg" alt="" style="width:100%">
+                    </div>
+
+                    <div class="item">
+                        <img src="images/4444.jpg" alt="" style="width:100%">
+                    </div>
+
+                    <div class="item">
+                        <img src="images/5555.jpg" alt="" style="width:100%">
+                    </div>
+
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
         </div>
-
-        <div class="item active">
-          <img src="images/1111.jpg" alt="" style="width:100%">
-        </div>
-
-        <div class="item">
-           <img src="images/2222.jpg" alt="" style="width:100%">
-        </div>
-
-        <div class="item">
-           <img src="images/3333.jpg" alt="" style="width:100%">
-        </div>
-
-        <div class="item">
-           <img src="images/4444.jpg" alt="" style="width:100%">
-        </div>
-
-        <div class="item">
-           <img src="images/5555.jpg" alt="" style="width:100%">
-        </div>
-
-    <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
     </div>
-  </div>
-</div>
-<!--Slider end-->
+    <!--Slider end-->
 
-<!--Content-->
-<div class="container">
-  <div class="row">
-    <div id="parent" class="col-sm-4">
-      <div class="thumbnail">
-      <a href="images/boss.jpg" target="blank">
-      <img src="images/boss.jpg" class="img-rounded" alt="baskan" width="300" height="170">
-        <div class="caption">
-            <p id="name">Başkan <br> Nihat Coşkun</p>
-          </div>
-        </a>
-      </div>
+    <!--Content-->
+    <div class="container">
+        <div class="row">
+            <div id="parent" class="col-sm-4">
+                <div class="thumbnail">
+                    <a href="images/boss.jpg" target="blank">
+                        <img src="images/boss.jpg" class="img-rounded" alt="baskan" width="300" height="170">
+                        <div class="caption">
+                            <p id="name">Başkan <br> Nihat Coşkun</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-sm-8">
+                <br>
+                <p>
+                    Merhaba</p>
+                <br>
+                <p>Derneğimiz 2015 yılında Aslancamii köyü ve mahallelerinden dernekleşmenin önemini bilen hizmet
+                    gönüllüleri tarafından kurulmuştur.
+                    Derneğimiz ilke olarak yardımlaşma ve dayanışmayı görev bilmiştir.
+                    Dernek yönetim kurulu, üyeleri ve aileleri derneğimizin gelişiminde önemli katkıları olmuştur.
+                    Derneğimiz sosyal bir dernek olarak büyümeye devam edecektir.
+                    Saygılarımla.</p>
+                <br>
+                <p>Herşey Aslancami için</p>
+                </p>
+                <br>
+            </div>
+        </div>
     </div>
 
-    <div class="col-sm-8">
-      <br>
-      <p>
-        Merhaba</p>
+    <!--Footer-->
+    <br>
+    <div id="footer3" class="container-fluid">
         <br>
-        <p>Derneğimiz 2015 yılında Aslancamii köyü ve mahallelerinden dernekleşmenin önemini bilen hizmet gönüllüleri tarafından kurulmuştur.
-        Derneğimiz ilke olarak yardımlaşma ve dayanışmayı görev bilmiştir.
-        Dernek yönetim kurulu, üyeleri ve aileleri derneğimizin gelişiminde önemli katkıları olmuştur.
-        Derneğimiz sosyal bir dernek olarak büyümeye devam edecektir.
-        Saygılarımla.</p>
+        <div id="footer4" class="container">
+            <div class="row">
+                <div class="col-xs-6 col-sm-3">
+                    <a href="http://www.fatsa.gov.tr/" target="blank">
+                        <img src="images/icon/1.png" alt="fatsagov" width="100" height="100">
+                    </a>
+                </div>
+
+                <div class="col-xs-6 col-sm-3">
+                    <a href="http://www.fatsa.bel.tr/" target="blank">
+                        <img src="images/icon/2.png" alt="fatsagov" width="100" height="100">
+                    </a>
+                </div>
+
+                <div class="col-xs-6 col-sm-3">
+                    <a href="http://www.ordu.bel.tr/" target="blank">
+                        <img src="images/icon/3.png" alt="fatsagov" width="100" height="100">
+                    </a>
+                </div>
+
+                <div class="col-xs-6 col-sm-3">
+                    <a href="http://www.ordu.gov.tr/" target="blank">
+                        <img src="images/icon/4.png" alt="fatsagov" width="100" height="100">
+                    </a>
+                </div>
+            </div>
+        </div>
         <br>
-        <p>Herşey Aslancami için</p>
-      </p>
-      <br>
-    </div>
-  </div>
-</div>
-
-<!--Footer-->
-<br>
-<div id="footer3" class="container-fluid">
-  <br>
-  <div id="footer4" class="container">
-    <div class="row">
-      <div class="col-xs-6 col-sm-3">
-        <a href="http://www.fatsa.gov.tr/" target="blank">
-        <img src="images/icon/1.png" alt="fatsagov" width="100" height="100">
-        </a>
-      </div>
-
-       <div class="col-xs-6 col-sm-3">
-        <a href="http://www.fatsa.bel.tr/" target="blank">
-        <img src="images/icon/2.png" alt="fatsagov" width="100" height="100">
-      </a>
-      </div>
-
-       <div class="col-xs-6 col-sm-3">
-        <a href="http://www.ordu.bel.tr/" target="blank">
-        <img src="images/icon/3.png" alt="fatsagov" width="100" height="100">
-      </a>
-      </div>
-
-       <div class="col-xs-6 col-sm-3">
-        <a href="http://www.ordu.gov.tr/" target="blank">
-        <img src="images/icon/4.png" alt="fatsagov" width="100" height="100">
-      </a>
-      </div>
-    </div>
-  </div>
-  <br>
-  <br>
-</div>
-
-
-<div id="footer" class="container-fluid">
-  <div id="footer2" class="container">
-    <div class="row">
-      <div class="col-sm-6 col-md-6">
-        <p><a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a></p>
-
-        <p><a href="mailto:aslancami@aslancamikoyudernegi.com.tr" id="email"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i> aslancami@aslancamikoyudernegi.com.tr</a></p>
-
-        <p><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i> Dumlupınar mah Ordu sok №19 Pendik/Istanbul</p>
         <br>
-
-      </div>
-
-      <div id="p" class="col-sm-6 col-md-6">
-        <a href="https://www.facebook.com/groups/961187180582440/?fref=nf" target="blank">
-        <img id="s1" src="images/soz/f.png" alt="f">
-      </a>
-
-       <a href="https://www.twitter.com" target="blank">
-        <img id="s2" src="images/soz/t.png" alt="t">
-      </a>
-
-       <a href="https://www.youtube.com" target="blank">
-        <img id="3" src="images/soz/u.png" alt="u">
-      </a>
-
     </div>
 
-</div>
-</div>
-</div>
 
-<div id="avtor" class="container-fluid">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <p>Made by Olga Coşkun</p>
-      </div>
+    <div id="footer" class="container-fluid">
+        <div id="footer2" class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-6">
+                    <p><a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone"
+                                                                               aria-hidden="true"></i> +90 538 471 52 52</a>
+                    </p>
+
+                    <p><a href="mailto:aslancami@aslancamikoyudernegi.com.tr" id="email"><i
+                            class="glyphicon glyphicon-envelope" aria-hidden="true"></i>
+                        aslancami@aslancamikoyudernegi.com.tr</a></p>
+
+                    <p><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i> Dumlupınar mah Ordu sok №19
+                        Pendik/Istanbul</p>
+                    <br>
+
+                </div>
+
+                <div id="p" class="col-sm-6 col-md-6">
+                    <a href="https://www.facebook.com/groups/961187180582440/?fref=nf" target="blank">
+                        <img id="s1" src="images/soz/f.png" alt="f">
+                    </a>
+
+                    <a href="https://www.twitter.com" target="blank">
+                        <img id="s2" src="images/soz/t.png" alt="t">
+                    </a>
+
+                    <a href="https://www.youtube.com" target="blank">
+                        <img id="3" src="images/soz/u.png" alt="u">
+                    </a>
+
+                </div>
+
+            </div>
+        </div>
     </div>
-  </div>
-</div>
+
+    <div id="avtor" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <p>Made by Olga Coşkun</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
